--- a/index.html
+++ b/index.html
@@ -17,27 +17,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>AGSA</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=274130687" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=113519077" id="pagesheet"/>
    </head>
  <body class="museBGSize">
 
   <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="clearfix colelem" id="pu94"><!-- group -->
-    <div class="clip_frame grpelem" id="u94" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
-     <img class="block" id="u94_img" src="images/wheel.png?crc=197838654" alt="" width="835" height="844"/>
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="u800"><!-- column -->
+     <div class="clearfix colelem" id="pu94"><!-- group -->
+      <div class="clip_frame grpelem" id="u94" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
+       <img class="block" id="u94_img" src="images/wheel.png?crc=4077048245" alt="" width="731" height="739"/>
+      </div>
+      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu135" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u136-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u136-2">day</p><p id="u136-4">one</p></div></a>
+      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu767" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u768-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u768-2">day</p><p id="u768-4">two</p></div></a>
+      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu779" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u780-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u780-2">day</p><p id="u780-4">three</p></div></a>
+      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu773" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u774-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u774-2">day</p><p id="u774-4">five</p></div></a>
+      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu761" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u762-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u762-2">day</p><p id="u762-4">Four</p></div></a>
+     </div>
+     <div class="Button rounded-corners clearfix colelem" id="buttonu167" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box -->
+      <div class="clearfix grpelem" id="u168-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+       <p>Lorem Ipsum</p>
+      </div>
+     </div>
     </div>
-    <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu135" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u136-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u136-2">day</p><p id="u136-4">one</p></div></a>
-    <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu767" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u768-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u768-2">day</p><p id="u768-4">two</p></div></a>
-    <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu779" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u780-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u780-2">day</p><p id="u780-4">three</p></div></a>
-    <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu773" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u774-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u774-2">day</p><p id="u774-4">five</p></div></a>
-    <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu761" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u762-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u762-2">day</p><p id="u762-4">Four</p></div></a>
+    <div class="verticalspacer" data-offset-top="1191" data-content-above-spacer="1191" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
-   <div class="Button rounded-corners clearfix colelem" id="buttonu167" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box -->
-    <div class="clearfix grpelem" id="u168-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
-     <p>Lorem Ipsum</p>
-    </div>
-   </div>
-   <div class="verticalspacer" data-offset-top="1216" data-content-above-spacer="1216" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
