--- a/agsa-smaller.html
+++ b/agsa-smaller.html
@@ -11,33 +11,35 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "require.js", "agsa-smaller.css"], "outOfDate":[]};
 </script>
   
-  <title>AGSA</title>
+  <title>AGSA smaller</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4060989917" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/agsa-smaller.css?crc=218949204" id="pagesheet"/>
    </head>
  <body class="museBGSize">
 
   <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="position_content" id="page_position_content">
-    <div class="clearfix colelem" id="u800"><!-- column -->
-     <div class="clearfix colelem" id="pu94"><!-- group -->
-      <div class="clip_frame grpelem" id="u94" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
-       <img class="block" id="u94_img" src="images/wheel.png?crc=4077048245" alt="" width="731" height="739"/>
-      </div>
-      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu135" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u136-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u136-2">day</p><p id="u136-4">one</p></div></a>
-      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu767" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u768-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u768-2">day</p><p id="u768-4">two</p></div></a>
-      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu779" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u780-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u780-2">day</p><p id="u780-4">three</p></div></a>
-      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu773" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u774-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u774-2">day</p><p id="u774-4">five</p></div></a>
-      <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu761" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u762-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u762-2">day</p><p id="u762-4">Four</p></div></a>
+   <div class="clearfix colelem" id="u845"><!-- column -->
+    <div class="clearfix colelem" id="pu848"><!-- group -->
+     <div class="clip_frame grpelem" id="u848" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
+      <img class="block" id="u848_img" src="images/wheel548x554.png?crc=489496721" alt="" width="548" height="554"/>
      </div>
-     <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu167" href="agsa-smaller.html" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u168-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Lorem Ipsum</p></div></a>
+     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu850" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u851-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u851-2">day</p><p id="u851-4">one</p></div></a>
+     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu846" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u847-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u847-2">day</p><p id="u847-4">two</p></div></a>
+     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu856" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u857-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u857-2">day</p><p id="u857-4">three</p></div></a>
+     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu852" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u853-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u853-2">day</p><p id="u853-4">five</p></div></a>
+     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu854" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u855-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u855-2">day</p><p id="u855-4">Four</p></div></a>
     </div>
-    <div class="verticalspacer" data-offset-top="839" data-content-above-spacer="838" data-content-below-spacer="10" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="Button rounded-corners clearfix colelem" id="buttonu858" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box -->
+     <div class="clearfix grpelem" id="u859-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+      <p>Lorem Ipsum</p>
+     </div>
+    </div>
    </div>
+   <div class="verticalspacer" data-offset-top="698" data-content-above-spacer="698" data-content-below-spacer="150" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
