--- a/agsa-smaller.html
+++ b/agsa-smaller.html
@@ -17,27 +17,41 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>AGSA smaller</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/agsa-smaller.css?crc=373900630" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/agsa-smaller.css?crc=311009249" id="pagesheet"/>
    </head>
  <body class="museBGSize">
 
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="clearfix colelem" id="u845"><!-- column -->
     <div class="clearfix colelem" id="pu848"><!-- group -->
-     <div class="clip_frame grpelem" id="u848" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
-      <img class="block" id="u848_img" src="images/wheel548x554.png?crc=489496721" alt="" width="548" height="554"/>
+     <a class="nonblock nontext clip_frame grpelem" id="u848" href="https://estudy.eu.crossknowledge.com/sso/training/820/Singleton/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image --><img class="block" id="u848_img" src="images/wheel548x554.png?crc=489496721" alt="" width="548" height="554"/></a>
+     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu850" href="https://estudy.eu.crossknowledge.com/sso/training/820/Singleton/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u851-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u851-2">day</p><p id="u851-4">one</p></div></a>
+     <div class="Button transition rounded-corners clearfix grpelem" id="buttonu846" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box -->
+      <div class="clearfix grpelem" id="u847-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+       <p id="u847-2">day</p>
+       <p id="u847-4">two</p>
+      </div>
      </div>
-     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu850" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u851-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u851-2">day</p><p id="u851-4">one</p></div></a>
-     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu846" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u847-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u847-2">day</p><p id="u847-4">two</p></div></a>
-     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu856" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u857-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u857-2">day</p><p id="u857-4">three</p></div></a>
-     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu852" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u853-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u853-2">day</p><p id="u853-4">five</p></div></a>
-     <a class="nonblock nontext Button transition rounded-corners clearfix grpelem" id="buttonu854" href="https://motusfinancialservices.eu.crossknowledge.com/sso/session/291/Enroll/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u855-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u855-2">day</p><p id="u855-4">Four</p></div></a>
-    </div>
-    <div class="Button rounded-corners clearfix colelem" id="buttonu858" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box -->
-     <div class="clearfix grpelem" id="u859-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
-      <p>Lorem Ipsum</p>
+     <div class="Button transition rounded-corners clearfix grpelem" id="buttonu856" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box -->
+      <div class="clearfix grpelem" id="u857-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+       <p id="u857-2">day</p>
+       <p id="u857-4">three</p>
+      </div>
+     </div>
+     <div class="Button transition rounded-corners clearfix grpelem" id="buttonu852" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box -->
+      <div class="clearfix grpelem" id="u853-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+       <p id="u853-2">day</p>
+       <p id="u853-4">five</p>
+      </div>
+     </div>
+     <div class="Button transition rounded-corners clearfix grpelem" id="buttonu854" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box -->
+      <div class="clearfix grpelem" id="u855-6" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
+       <p id="u855-2">day</p>
+       <p id="u855-4">Four</p>
+      </div>
      </div>
     </div>
+    <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu858" href="https://estudy.eu.crossknowledge.com/sso/training/820/Singleton/yes/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- container box --><div class="clearfix grpelem" id="u859-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Lorem Ipsum</p></div></a>
    </div>
    <div class="verticalspacer" data-offset-top="698" data-content-above-spacer="698" data-content-below-spacer="150" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
